Changes for CPD 3.5

--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install watson-machine-learning-client-V4==1.0.99"
+    "pip install ibm-watson-machine-learning"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watson_machine_learning_client import WatsonMachineLearningAPIClient\n",
+    "from ibm_watson_machine_learning import APIClient\n",
     "import joblib"
    ]
   },
