Changes for CPD 3.5 (2)

--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "wml_credentials = CPD_3_project_credentials\n",
-    "icp_client = WatsonMachineLearningAPIClient(wml_credentials)"
+    "icp_client = APIClient(wml_credentials)"
    ]
   },
   {
