Changes for CPD 3.5 (3)

--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -167,8 +167,10 @@
     "    ]\n",
     "}\n",
     "\n",
-    "model_props = {icp_client.repository.ModelMetaNames.NAME: \"<INSERT-NAME-OF-MODEL-HERE>\",\n",
-    "               icp_client.repository.ModelMetaNames.RUNTIME_UID: \"scikit-learn_0.20-py3.6\",\n",
+    "sw_spec_id = icp_client.software_specifications.get_id_by_name('scikit-learn_0.22-py3.6')\n",
+    "\n",
+    "model_props = {icp_client.repository.ModelMetaNames.NAME: \"sklearn-SVC-model\",\n",
+    "               icp_client.repository.ModelMetaNames.RUNTIME_UID: \"sw_spec_id\",\n",
     "               icp_client.repository.ModelMetaNames.TYPE: \"scikit-learn_0.20\",\n",
     "               icp_client.repository.ModelMetaNames.INPUT_DATA_SCHEMA: input_schema,\n",
     "}"
