--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -170,7 +170,7 @@
     "sw_spec_id = icp_client.software_specifications.get_id_by_name('scikit-learn_0.20-py3.6')\n",
     "\n",
     "model_props = {icp_client.repository.ModelMetaNames.NAME: \"sklearn-SVC-model\",\n",
-    "               icp_client.repository.ModelMetaNames.SOFTWARE_SPEC_UID: \"sw_spec_id\",\n",
+    "               icp_client.repository.ModelMetaNames.SOFTWARE_SPEC_UID: sw_spec_id,\n",
     "               icp_client.repository.ModelMetaNames.TYPE: \"scikit-learn_0.20\",\n",
     "               icp_client.repository.ModelMetaNames.INPUT_DATA_SCHEMA: input_schema,\n",
     "}"
@@ -202,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
