added newer models

--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install scikit-learn==0.20"
+    "pip install scikit-learn==0.23"
    ]
   },
   {
@@ -32,15 +32,6 @@
    "outputs": [],
    "source": [
     "pip install joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install tensorflow"
    ]
   },
   {
@@ -81,7 +72,7 @@
     "    \"instance_id\": \"openshift\",\n",
     "    \"username\": \"...\",\n",
     "    \"password\": \"..\",\n",
-    "    \"version\": \"3.0.1\"\n",
+    "    \"version\": \"3.5\"\n",
     "}"
    ]
   },
@@ -121,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure that `scikit-learn_0.20` is supported on your CPD instance by running the following cell, and confirming it is present. For more information, please visit https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/wsj/wmls/wmls-deploy-python-types.html"
+    "Ensure that `scikit-learn_0.23` is supported on your CPD instance by running the following cell, and confirming it is present. For more information, please visit https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/wsj/wmls/wmls-deploy-python-types.html"
    ]
   },
   {
@@ -146,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = joblib.load('./sklearn-SVC-model')"
+    "clf = joblib.load('./sklearn-SVC-model-023')"
    ]
   },
   {
@@ -167,11 +158,11 @@
     "    ]\n",
     "}\n",
     "\n",
-    "sw_spec_id = icp_client.software_specifications.get_id_by_name('scikit-learn_0.20-py3.6')\n",
+    "sw_spec_id = icp_client.software_specifications.get_id_by_name('scikit-learn_0.23-py3.6')\n",
     "\n",
     "model_props = {icp_client.repository.ModelMetaNames.NAME: \"sklearn-SVC-model\",\n",
     "               icp_client.repository.ModelMetaNames.SOFTWARE_SPEC_UID: sw_spec_id,\n",
-    "               icp_client.repository.ModelMetaNames.TYPE: \"scikit-learn_0.20\",\n",
+    "               icp_client.repository.ModelMetaNames.TYPE: \"scikit-learn_0.23\",\n",
     "               icp_client.repository.ModelMetaNames.INPUT_DATA_SCHEMA: input_schema,\n",
     "}"
    ]
@@ -202,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
