--- a/model_upload.ipynb
+++ b/model_upload.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = joblib.load('./sklearn-SVC-model-023')"
+    "clf = joblib.load('./sklearn-023-SVC-model')"
    ]
   },
   {
